fixed css by @areaweb suggestion, the talks page was broken in safari

--- a/stylesheets/talks.css
+++ b/stylesheets/talks.css
@@ -13,6 +13,7 @@
 
 .talk__speaker {
   margin-right: 1.5rem;
+  min-width: 8em;
 }
 
 @media (max-width: 30rem) {
